--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,32 +1,47 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "hostRequirements": {
-    "cpus": 2
-  },
-  "waitFor": "onCreateCommand",
-  "updateContentCommand": "pip install -r requirements.txt",
-  "postCreateCommand": "",
-  "postAttachCommand": {
-    "server": "flask --debug run"
-  },
-  "portsAttributes": {
-    "5000": {
-      "label": "Application",
-      "onAutoForward": "openPreview",
-      "visibility": "public"
-    }
-  },
-  "customizations": {
-    "codespaces": {
-      "openFiles": [
-        "templates/index.html"
-      ]
-    },
-    "vscode": {
-      "extensions": [
-        "ms-python.python"
-      ]
-    }
-  },
-  "forwardPorts": [5000]
+	"name": "CodespaceActionsRunner",
+	"dockerFile": "Dockerfile",
+	
+	// Configure tool-specific properties.
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {		
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"ms-vscode.azurecli",
+				"ms-vscode.powershell",
+				"hashicorp.terraform",
+				"tfsec.tfsec",
+				"esbenp.prettier-vscode"
+			]
+		}
+	},
+	
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
+	// Use 'postStartCommand' to run commands each time the container is successfully started..
+    "postStartCommand": "/home/vscode/actions-runner/start.sh",
+
+	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	"remoteUser": "vscode",
+	// Amend GitHub runner version with 'RUNNER_VERSION'. https://github.com/actions/runner/releases.
+	//"build": {
+	//	"args": {
+	//		"X": "y"
+	//	}
+	//},
+	"features": {
+		"ghcr.io/devcontainers/features/common-utils:2": {},
+		"ghcr.io/lukewiwa/features/shellcheck:0": {},
+		"ghcr.io/devcontainers/features/github-cli:1": {},
+		"ghcr.io/devcontainers/features/terraform:1": {
+			"installSentinel": true,
+			"installTFsec": true,
+			"installTerraformDocs": true,
+			"version": "latest",
+			"tflint": "latest",
+			"terragrunt": "latest"
+		}
+	}
 }
